# cookiecutter-djhcms

./: .coveragerc  README.md  README.rst  cookiecutter.json  pyproject.toml  requirements-init.txt
hooks/: post_gen_project.sh
{{cookiecutter.project_dir}}/: .dockerignore  .env.TEMPLATE  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_dir}}/{{cookiecutter.project_slug}}/config/: asgi.py  urls.py
{{cookiecutter.project_dir}}/{{cookiecutter.project_slug}}/config/settings/: base.py
